Fixed the styling of the snap item images on small screens

--- a/src/components/imageItem/snapImageStyles.css
+++ b/src/components/imageItem/snapImageStyles.css
@@ -16,3 +16,19 @@ display: inline-block;
     height: 100%;
     width: 100%;
 }
+@media only screen and (max-width:850px){
+    .snap-item{
+        height:90%
+    }
+    .snap-item span{
+        height: 95%;
+        width: 100%;
+        z-index: -1;
+    }
+    .snap-item p{
+        position: relative;
+        bottom: 60px;
+        left: 10px;
+        z-index: 10;
+    }
+}
